--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@angular/common": "8.2.13",
     "@angular/compiler": "8.2.13",
     "@angular/core": "8.2.13",
-    "@angular/fire": "^5.2.1",
+    "@angular/fire": "6.0.0",
     "@angular/forms": "8.2.13",
     "@angular/material": "^8.2.3",
     "@angular/platform-browser": "8.2.13",
@@ -29,24 +29,25 @@
     "@angular/service-worker": "8.2.13",
     "@ngx-translate/core": "11.0.1",
     "@ngx-translate/http-loader": "^4.0.0",
-    "core-js": "^2.6.10",
-    "dayjs": "^1.8.16",
-    "firebase": "^5.11.1",
+    "angularfire2": "^5.4.2",
+    "core-js": "^2.6.11",
+    "dayjs": "^1.8.24",
+    "firebase": "^7.14.0",
     "hammerjs": "^2.0.8",
     "ng-lazyload-image": "^5.1.2",
-    "rxjs": "^6.5.3",
-    "tslib": "^1.10.0",
+    "rxjs": "^6.5.5",
+    "tslib": "^1.11.1",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.803.17",
+    "@angular-devkit/build-angular": "^0.803.26",
     "@angular/cli": "8.3.17",
     "@angular/compiler-cli": "8.2.13",
     "@angular/language-service": "8.2.13",
     "@types/jasmine": "2.8.9",
     "@types/node": "~8.0.30",
-    "codelyzer": "^5.2.0",
-    "http-server": "^0.11.1",
+    "codelyzer": "^5.2.2",
+    "http-server": "^0.12.1",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "^4.1.0",
@@ -55,11 +56,11 @@
     "karma-coverage-istanbul-reporter": "2.0.4",
     "karma-jasmine": "~1.1.1",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "node-sass": "^4.13.0",
-    "protractor": "~5.4.2",
+    "node-sass": "^4.13.1",
+    "protractor": "^5.4.3",
     "ts-node": "~5.0.1",
     "tslint": "~5.11.0",
     "typescript": "3.5.3",
-    "webpack-bundle-analyzer": "^3.6.0"
+    "webpack-bundle-analyzer": "^3.6.1"
   }
 }
